--- a/java-spring-boot-ru/profiles/src/main/resources/application-development.yml
+++ b/java-spring-boot-ru/profiles/src/main/resources/application-development.yml
@@ -1,19 +1,8 @@
 # BEGIN
 ---
-
 spring:
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-  output:
-    ansi:
-      enabled: always
-  config:
-    activate:
-      on-profile: development
   datasource:
-    password: 123
-    url: jdbc:h2:mem:test
+    url: "jdbc:h2:mem:test"
     username: sa
+    password: 123
 # END
